--- a/libs/components/src/lib/components/cron/components/second/second.component.html
+++ b/libs/components/src/lib/components/cron/components/second/second.component.html
@@ -15,8 +15,8 @@
         ></prizm-radio-button>
       </div>
       <div class="content row">
-        {{ cronI18n$ | async | prizmPluck : ['general', 'everyFemale'] }}
-        {{ cronI18n$ | async | prizmPluck : ['second', 'second'] }}
+        {{ cronI18n$ | async | prizmPluck : ['everyFemale'] }}
+        {{ cronI18n$ | async | prizmPluck : ['second'] }}
       </div>
     </label>
   </ng-container>
@@ -37,7 +37,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content row">
-        <span> {{ cronI18n$ | async | prizmPluck : ['general', 'everyFemale'] }} </span>
+        <span> {{ cronI18n$ | async | prizmPluck : ['everyFemale'] }} </span>
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
           [value]="cronUiState.state$ | async | prizmPluck : ['everyChosenTimesAfterChosen', 'on']"
@@ -47,7 +47,7 @@
             {{ value }}
           </ng-template>
         </prizm-cron-carousel>
-        <span>{{ cronI18n$ | async | prizmPluck : ['second', 'secondSince'] }}</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['secondSince'] }}</span>
 
         <prizm-cron-carousel
           [content]="cronUiState.list | prizmPluck : ['everyChosenTimesAfterChosen', 'after']"
@@ -74,7 +74,7 @@
         ></prizm-radio-button>
       </div>
       <div class="content column">
-        <span>{{ cronI18n$ | async | prizmPluck : ['second', 'selectedSecond'] }}</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['selectedSecond'] }}</span>
         <prizm-cron-schedule
           #schedule
           [items]="cronUiState.list.specified"
@@ -102,16 +102,16 @@
       </div>
       <div class="content">
         <span>
-          {{ cronI18n$ | async | prizmPluck : ['general', 'everyFemale'] }}
-          {{ cronI18n$ | async | prizmPluck : ['second', 'second'] }}
-          {{ cronI18n$ | async | prizmPluck : ['general', 'from'] }}
+          {{ cronI18n$ | async | prizmPluck : ['everyFemale'] }}
+          {{ cronI18n$ | async | prizmPluck : ['second'] }}
+          {{ cronI18n$ | async | prizmPluck : ['from'] }}
         </span>
         <prizm-cron-carousel
           [content]="cronUiState.list.between.start"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'start']"
           (valueChange)="cronUiState.updateBetween({ start: $event })"
         ></prizm-cron-carousel>
-        <span>{{ cronI18n$ | async | prizmPluck : ['general', 'to'] }}</span>
+        <span>{{ cronI18n$ | async | prizmPluck : ['to'] }}</span>
         <prizm-cron-carousel
           [content]="cronUiState.list.between.end"
           [value]="cronUiState.state$ | async | prizmPluck : ['between', 'end']"
