feat: add decimal input to documentation

--- a/apps/doc/src/app/charts/gauge/gauge.component.html
+++ b/apps/doc/src/app/charts/gauge/gauge.component.html
@@ -50,7 +50,7 @@
       <ng-template
         [(documentationPropertyValue)]="percent"
         documentationPropertyName="percent"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Percent
