--- a/libs/components/src/lib/components/cron/cron.component.html
+++ b/libs/components/src/lib/components/cron/cron.component.html
@@ -1,8 +1,15 @@
 <div class="block">
   <div class="title py-none inner-block small-padding">
-    <span class="prizm-font-title-h4">
-      {{ cronTitle ?? (cronI18n$ | async | prizmPluck : ['title']) }}
-    </span>
+    <ng-container *prizmLet="cronTitle ?? (cronI18n$ | async | prizmPluck : ['title']) as title">
+      <span
+        class="prizm-font-title-h4 cron-title"
+        #element
+        [prizmHint]="title"
+        [prizmHintCanShow]="prizmIsTextOverflow(element)"
+      >
+        {{ title }}
+      </span>
+    </ng-container>
     <div class="submit-block" *ngIf="!hideResult || !autoSubmit">
       <ng-container *ngIf="!hideResult">
         <prizm-input-layout
