--- a/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
@@ -6,7 +6,7 @@
   [maxFileSize]="1000000"
   [disabled]="disabled"
   (filesChange)="onFilesChange($event)"
-  (filesValidationErrors)="onfilesValidationErrors($any($event))"
+  (filesValidationErrors)="onfilesValidationErrors($event)"
   (filesCountError)="onFilesCountError($event)"
   (retry)="retry($event)"
 >
