fix: add resizeObserver for nav-item for hint correct display

--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
@@ -1,5 +1,6 @@
 <div
   class="nav"
+  #container
   [class.nav_active]="isActive$ | async"
   [prizmHint]="menuItem?.title"
   [prizmHintCanShow]="prizmIsTextOverflow(title)"
