fix: add resizeObserver for nav-item for hint correct display #1510

--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div
     class="nav"
+    #container
     [class.nav_active]="isActive$ | async"
     [prizmHint]="menuItem?.title"
     [prizmHintCanShow]="prizmIsTextOverflow(title)"
