fix: icons replaced with buttons #1486

--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
@@ -50,36 +50,41 @@
         </td>
         <td *prizmCell="'actions'" prizmTd>
           <div class="edit-buttons-container" (click)="$event.stopPropagation()">
-            <prizm-icon
-              class="edit-buttons"
+            <button
               *ngIf="currentEditableRow !== item"
               (click)="onRowEditInit(item)"
-              size="16"
-              iconClass="editor-mode"
-            ></prizm-icon>
-
-            <prizm-icon
-              class="edit-buttons"
+              appearance="secondary"
+              icon="editor-mode"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               *ngIf="currentEditableRow === item"
               (click)="onRowEditSave()"
-              size="16"
-              iconClass="selection-choice"
-            ></prizm-icon>
-
-            <prizm-icon
-              class="edit-buttons"
+              appearance="secondary"
+              icon="selection-choice"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               *ngIf="currentEditableRow === item"
               (click)="onRowEditCancel(item)"
-              size="16"
-              iconClass="cancel-close"
-            ></prizm-icon>
-
-            <prizm-icon
-              class="edit-buttons"
+              appearance="secondary"
+              icon="cancel-close"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               (click)="onRowDelete(item)"
-              size="16"
-              iconClass="delete"
-            ></prizm-icon>
+              appearance="secondary"
+              icon="delete-empty"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
           </div>
         </td>
       </tr>
