--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
@@ -50,33 +50,41 @@
         </td>
         <td *prizmCell="'actions'" prizmTd>
           <div class="edit-buttons-container" (click)="$event.stopPropagation()">
-            <prizm-icons-full
-              class="edit-buttons"
+            <button
               *ngIf="currentEditableRow !== item"
               (click)="onRowEditInit(item)"
-              size="16"
-              name="pencil"
-            ></prizm-icons-full>
-            <prizm-icons-full
-              class="edit-buttons"
+              appearance="secondary"
+              icon="pencil"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               *ngIf="currentEditableRow === item"
               (click)="onRowEditSave()"
-              size="16"
-              name="circle-check-empty"
-            ></prizm-icons-full>
-            <prizm-icons-full
-              class="edit-buttons"
+              appearance="secondary"
+              icon="circle-check-empty"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               *ngIf="currentEditableRow === item"
               (click)="onRowEditCancel(item)"
-              size="16"
-              name="xmark"
-            ></prizm-icons-full>
-            <prizm-icons-full
-              class="edit-buttons"
+              appearance="secondary"
+              icon="xmark"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
+            <button
               (click)="onRowDelete(item)"
-              size="16"
-              name="trash-empty"
-            ></prizm-icons-full>
+              appearance="secondary"
+              icon="trash-empty"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
           </div>
         </td>
       </tr>
