--- a/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.html
@@ -12,12 +12,21 @@
             [content]="dropdown"
             prizmDropdownHostWidth="auto"
           >
-            <prizm-icons-full
+            <!--<prizm-icons-full
               class="filter__category"
               [class.filter__category_active]="filterOpen || filterOn"
               (click)="filterOpen = !filterOpen"
               name="filter"
-            ></prizm-icons-full>
+            ></prizm-icons-full>-->
+            <button
+              class="filter__category"
+              [appearance]="filterOpen || filterOn ? 'primary' : 'secondary'"
+              (click)="filterOpen = !filterOpen"
+              icon="filter"
+              prizmIconButton
+              appearanceType="ghost"
+              size="s"
+            ></button>
           </prizm-dropdown-host>
         </th>
         <th *prizmHead="'count'" prizmTh>Количество</th>
