fix: fix th width with sort #1561

--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -83,6 +83,11 @@
         color: var(--prizm-button-primary-solid-default);
       }
     }
+
+    &__number {
+      min-width: 16px;
+      text-align: end;
+    }
   }
 }
 
