fix: tree button animation #1561

--- a/libs/components/src/lib/components/tree-button/tree-button.component.less
+++ b/libs/components/src/lib/components/tree-button/tree-button.component.less
@@ -5,3 +5,11 @@
 .hide {
   visibility: var(--prizm-tree-button-hide-visibility, hidden);
 }
+
+.chevron {
+  transition: 0.3s;
+
+  &_expanded {
+    transform: rotate(90deg);
+  }
+}
