--- a/libs/components/src/lib/components/tree-button/tree-button.component.html
+++ b/libs/components/src/lib/components/tree-button/tree-button.component.html
@@ -1,14 +1,7 @@
 <span [innerHTML]="space"></span>
-<span *ngIf="!removeIcon" [ngSwitch]="open" [class.hide]="!visibilityIcon">
-  <span *ngSwitchCase="true" (click)="!manualChange && changeOpenState(false)">
-    <ng-container *polymorphOutlet="iconOpen as icon; context: { size: this.size }">
-      <prizm-icon [iconClass]="$any(icon)" [size]="size"></prizm-icon>
-    </ng-container>
-  </span>
-  <span *ngSwitchDefault (click)="!manualChange && changeOpenState(true)">
-    <ng-container *polymorphOutlet="iconClose as icon; context: { size: this.size }">
-      <prizm-icon [iconClass]="$any(icon)" [size]="size"></prizm-icon>
-    </ng-container>
+<span class="chevron" *ngIf="!removeIcon" [class.hide]="!visibilityIcon" [class.chevron_expanded]="open">
+  <span (click)="!manualChange && changeOpenState(!open)">
+    <prizm-icon [iconClass]="$any(iconClose)" [size]="size"></prizm-icon>
   </span>
 </span>
 <ng-content></ng-content>
