fix: changed content-box width in toast #1433

--- a/libs/components/src/lib/components/toast/toast/toast.component.less
+++ b/libs/components/src/lib/components/toast/toast/toast.component.less
@@ -18,7 +18,7 @@
 
   .content-box {
     display: flex;
-    width: calc(100% - 72px);
+    width: 100%;
     word-wrap: break-word;
     flex-flow: column;
     justify-content: space-between;
