--- a/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.less
@@ -11,7 +11,21 @@
     margin-left: auto;
 
     &__category {
-      margin-left: 4px;
+      height: 24px;
+      width: 24px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      color: #777b92;
+
+      cursor: pointer;
+
+      &_active,
+      &:hover {
+        color: #337eff;
+      }
     }
   }
 
