--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.less
@@ -17,7 +17,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 4px;
+    gap: 8px;
+
+    .edit-buttons {
+      height: 16px;
+      width: 16px;
+
+      display: flex;
+
+      &:hover {
+        color: #337eff;
+      }
+    }
   }
 
   .row {
