--- a/libs/components/src/lib/components/cron/components/day/day.component.html
+++ b/libs/components/src/lib/components/cron/components/day/day.component.html
@@ -84,7 +84,7 @@
             (valueChange)="cronUiState.updateAfterDayOfWeek({ afterDayOfWeekListDayOfWeeksValue: $event })"
           >
             <ng-template #content let-value="content">
-              {{ value | prizmCronWeek }}
+              {{ cronI18n.weekDays[value - 1] }}
             </ng-template>
           </prizm-cron-carousel>
         </div>
@@ -150,7 +150,7 @@
             (selectedChange)="cronUiState.updateSelectedDayOfWeek($event)"
           >
             <ng-template #content let-item="item">
-              {{ item.value | prizmCronWeek : 'E' }}
+              {{ cronI18n.shortWeekDays[item.value - 1] }}
             </ng-template>
           </prizm-cron-schedule>
         </div>
@@ -252,7 +252,7 @@
             (valueChange)="cronUiState.updateLastChosenDayOfWeek($event)"
           >
             <ng-template #content let-value="content">
-              {{ value | prizmCronWeek }}
+              {{ cronI18n.weekDays[value - 1] }}
             </ng-template>
           </prizm-cron-carousel>
           {{ cronI18n | prizmPluck : ['last_ofMonth'] }}
@@ -350,7 +350,7 @@
             (valueChange)="cronUiState.updateLastChosenDayOfChosenWeek(null, $event)"
           >
             <ng-template #content let-value="content">
-              {{ value | prizmCronWeek }}
+              {{ cronI18n.weekDays[value - 1] }}
             </ng-template>
           </prizm-cron-carousel>
           {{ cronI18n | prizmPluck : ['ofMonth'] }}
