feat: fixed cron title overflow #1431

--- a/libs/components/src/lib/components/cron/cron.component.html
+++ b/libs/components/src/lib/components/cron/cron.component.html
@@ -13,6 +13,7 @@
     <div class="submit-block" *ngIf="!hideResult || !autoSubmit">
       <ng-container *ngIf="!hideResult">
         <prizm-input-layout
+          class="submit-block__input"
           *prizmLet="valueAsString$ | async as valueStr"
           [border]="false"
           [label]="null"
