--- a/libs/components/src/lib/components/cron/cron.component.less
+++ b/libs/components/src/lib/components/cron/cron.component.less
@@ -14,7 +14,6 @@
 }
 
 .cron-title {
-  max-width: 280px;
   margin-right: 1rem;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -68,6 +67,10 @@
   display: flex;
   align-items: center;
   gap: 8px;
+
+  &__input {
+    width: 230px;
+  }
 }
 
 :host {
