feat: use decimal input in slider and input number live demo #1500

--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -180,7 +180,7 @@
       <ng-template
         [(documentationPropertyValue)]="min"
         documentationPropertyName="min"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Minimum value
@@ -198,7 +198,7 @@
       <ng-template
         [(documentationPropertyValue)]="max"
         documentationPropertyName="max"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Maximum value
@@ -207,7 +207,7 @@
       <ng-template
         [(documentationPropertyValue)]="step"
         documentationPropertyName="step"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Step
