--- a/apps/doc/src/app/components/slider/slider.component.html
+++ b/apps/doc/src/app/components/slider/slider.component.html
@@ -43,9 +43,8 @@
     <prizm-doc-documentation>
       <ng-template
         [(documentationPropertyValue)]="min"
-        [documentationPropertyValues]="minValues"
         documentationPropertyName="min"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Min
@@ -53,9 +52,8 @@
 
       <ng-template
         [(documentationPropertyValue)]="max"
-        [documentationPropertyValues]="maxValues"
         documentationPropertyName="max"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Max
@@ -63,9 +61,8 @@
 
       <ng-template
         [(documentationPropertyValue)]="step"
-        [documentationPropertyValues]="stepValues"
         documentationPropertyName="step"
-        documentationPropertyType="number"
+        documentationPropertyType="decimal"
         documentationPropertyMode="input"
       >
         Step
