fix: bottom border of group removed. added top border #1585

--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-group/prizm-navigation-menu-group.component.less
@@ -6,7 +6,7 @@
 
   .prizm-navigation-menu-group {
     --prizm-empty-message__padding: 16px 32px;
-    border-bottom: 1px solid var(--prizm-background-stroke);
+    border-top: 1px solid var(--prizm-background-stroke);
 
     &_expanded:has(.empty-message) {
       border-bottom: none;
