feat(doc): now we support v4 demos

--- a/libs/doc/base/src/lib/components/example/example.component.html
+++ b/libs/doc/base/src/lib/components/example/example.component.html
@@ -34,6 +34,7 @@
           <button (click)="open('1')" prizmButton appearanceType="outline" size="s">V1 (NG14)</button>
           <button (click)="open('2')" prizmButton appearanceType="outline" size="s">V2 (NG15)</button>
           <button (click)="open('3')" prizmButton appearanceType="outline" size="s">V3 (NG16)</button>
+          <button (click)="open('4')" prizmButton appearanceType="outline" size="s">V4 (NG17)</button>
         </div>
       </prizm-data-list>
     </ng-template>
