feat(doc/paginator): added example with i18n to change texts and tests #1605

--- a/apps/doc/src/app/components/paginator/paginator-example.component.html
+++ b/apps/doc/src/app/components/paginator/paginator-example.component.html
@@ -18,6 +18,10 @@
     <prizm-doc-example id="inf" [content]="exampleInfinitePaginator" heading="Infinite">
       <prizm-paginator-infinite-example></prizm-paginator-infinite-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="i18n" [content]="exampleI18nPaginator" heading="I18n">
+      <prizm-paginator-i18n-example></prizm-paginator-i18n-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
