--- a/libs/components/src/lib/components/paginator/paginator.component.html
+++ b/libs/components/src/lib/components/paginator/paginator.component.html
@@ -24,10 +24,19 @@
 
   <div class="content">
     <span class="rows rows__show" *ngIf="!paginatorOptions?.noInfo" [hidden]="disabled">
-      {{ paginator$ | async | prizmPluck : ['linesShown'] }} {{ (currentPage - 1) * rows + 1 }}-{{
-        currentPage * rows > $any(totalRecords) ? totalRecords : currentPage * rows
-      }}
-      {{ paginator$ | async | prizmPluck : ['fromText'] }} {{ realTotalRecord }}
+      <span data-testid="paginator-i18n-lines-shown">
+        {{ paginator$ | async | prizmPluck : ['linesShown'] }}
+      </span>
+      <span data-testid="paginator-lines-shown"> {{ (currentPage - 1) * rows + 1 }} </span>-
+      <span data-testid="paginator-total-count">
+        {{ currentPage * rows > $any(totalRecords) ? totalRecords : currentPage * rows }}
+      </span>
+      <span data-testid="paginator-i18n-from-text">
+        {{ paginator$ | async | prizmPluck : ['fromText'] }}
+      </span>
+      <span data-testid="paginator-real-total-record">
+        {{ realTotalRecord }}
+      </span>
     </span>
     <div
       class="paginator paginator__finite"
