fix: panel instruments cut focus styles #1625

--- a/libs/components/src/lib/components/panel/panel.component.less
+++ b/libs/components/src/lib/components/panel/panel.component.less
@@ -83,6 +83,7 @@
     .instruments {
       margin-left: auto;
       padding-left: 8px;
+      padding-right: 4px;
       display: flex;
       overflow: hidden;
     }
