fix: contenct select=top is geting back

--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.html
@@ -42,7 +42,7 @@
       <prizm-scrollbar class="scrollable">
         <section class="groups-content__top">
           <ng-content></ng-content>
-          <!--<ng-content select="[top]"></ng-content>-->
+          <ng-content select="[top]"></ng-content>
         </section>
       </prizm-scrollbar>
       <section class="groups-content__bottom">
