fix: chips height changed

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -116,6 +116,10 @@ prizm-chips,
     margin: 4px 0;
   }
 
+  &.single-line:not(:empty) {
+    margin-bottom: 0px;
+  }
+
   prizm-chips-item {
     height: 18px;
   }
