--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -26,6 +26,9 @@
             [hintCanShow]="hintCanShow"
             [prizmDocHostElement]="chipsItem"
             [selected]="selected"
+            [style.--prizm-chips-item-heigh]="prizmChipsItemHeight"
+            [style.--prizm-chips-item-background]="prizmChipsItemBackground"
+            [style.--prizm-chips-item-color]="prizmChipsItemColor"
             style="width: 100px"
             prizmDocHostElementKey="PrizmChipsItemComponent"
           >
@@ -60,6 +63,30 @@
       </div>
     </prizm-doc-demo>
     <prizm-doc-documentation heading="PrizmChipsItemComponent" hostComponentKey="PrizmChipsItemComponent">
+      <ng-template
+        [(documentationPropertyValue)]="prizmChipsItemHeight"
+        documentationPropertyName="prizm-chips-item-heigh"
+        documentationPropertyType="string"
+        documentationPropertyMode="css-var"
+      >
+        Chips item height (default 24px)
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="prizmChipsItemBackground"
+        documentationPropertyName="prizm-chips-item-background"
+        documentationPropertyType="string"
+        documentationPropertyMode="css-var"
+      >
+        Chips item background color
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="prizmChipsItemColor"
+        documentationPropertyName="prizm-chips-item-color"
+        documentationPropertyType="string"
+        documentationPropertyMode="css-var"
+      >
+        Chips item font color
+      </ng-template>
       <ng-template
         [(documentationPropertyValue)]="disabled"
         documentationPropertyName="disabled"
