--- a/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
+++ b/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
@@ -15,7 +15,7 @@ button {
 }
 
 .chips-list__item {
-  height: 18px;
+  height: var(--prizm-chips-item-heigh, 24px);
   min-width: 4px;
   max-width: 100%;
   padding: 4px;
